anypoint-connector-devkit/v/3.4/packaging-your-connector-for-release.adoc
= 打包发布的连接器

当您的连接器准备好向广大用户发布时，请采取以下额外步骤以确保用户成功：

* 为您的连接器创建许可协议。
* 开发端到端的演练以说明如何使用连接器执行常见用例。

== 假设

本文档假定您已经成功开发了连接器并将它们记录在文档中以准备发布。

== 自定义许可协议

在连接器安装期间，Studio向用户提供许可协议。自定义此协议的内容以反映您的条款。

在构建过程中，Maven首先在与`pom.xml`文件相同的目录中搜索`LICENSE.md`文件。

如果找不到该文件，Maven将执行以下一系列步骤来查找许可协议：

. 它检查与`pom.xml`在同一目录中的`LICENSE.txt`文件。
. 如果`pom.xml`文件包含*Licenses*部分（如 http://maven.apache.org/pom.html#Licenses[Maven文档]中所述），则DevKit会尝试从许可证的URL下载文本，然后保存下载的内容作为新的`LICENSE.md`文件。
. 如果上述步骤未找到许可证文本，则构建失败。

== 创建端到端的用例示例

一个或多个端到端演示对于帮助用户成功连接您的连接器非常有用。

////
https://github.com/mulesoft/box-connector/blob/master/doc/sample.md[Box连接器]提供了一个有效的连接器用例的绝佳示例，其中包括一步一步的安装和演示使用连接器。
////

== 证明并发布您的连接器

MuleSoft的程序认证并发布第三方连接器，以便在MuleSoft.org上向社区分发。有关此程序的更多信息，请mailto：connector_team@mulesoft.com [联系我们]。



== 将连接器上传到Exchange

Anypoint Studio通过涵盖所有版​​本连接器的*Feature ID*来识别每个连接器。为了通过 link:/anypoint-exchange[Anypoint Exchange]公开您的连接器，Exchange会提示您在上传连接器资源时提供此功能ID以及版本号。

按照以下步骤获取此ID：

. 解压缩包含连接器更新站点的文件
. 在创建的文件夹中，查找`context.xml`文件并使用文本编辑器打开它

. 在此文件中，搜索一个遵循以下模式的字符串：`id=’org.mule.tooling.ui.extension.<connector name>.feature.group’`。整个值就是连接器的功能ID。作为一个更具体的例子，你的特征ID可以是'org.mule.tooling.ui.extension.cloudhub.3.6.0.feature.group'


在同一个`context.xml`文件中，您可以在功能ID旁边找到名为*version*的标签。在Exchange中的*Connector Version*字段中提供此值。消费者以后只会看到美化和更简单的版本号。例如，如果您提供的版本号是2.0.1.201606101417，他们将只看到2.0.1。只有在编辑特定版本时才会显示完整版本号。



== 下一步

*  link:/anypoint-connector-devkit/v/3.4/supporting-datasense-with-dynamic-data-models[添加DataSense]（设计时元数据感知）到您的连接器。
* 研究其它 link:/anypoint-connector-devkit/v/3.4/devkit-advanced-topics[高级主题]。
