anypoint-connector-devkit/v/3.5/packaging-your-connector-for-release.adoc
= 打包发布的连接器

当您的连接器准备好向广大用户发布时，请采取以下额外步骤以确保用户成功：

* 为您的连接器创建许可协议。
* 开发端到端的演练以说明如何使用连接器执行常见用例。

image:9-package.png[9包]

== 假设

本文档假定您已经成功开发了连接器并将它们记录在文档中以准备发布。

== 自定义许可协议

在连接器安装期间，Studio向用户提供许可协议。自定义此协议的内容以反映您的条款。

在构建过程中，Maven首先在与`pom.xml`文件相同的目录中搜索`LICENSE.md`文件。

如果找不到该文件，Maven将执行以下一系列步骤来查找许可协议：

.  Maven在与`pom.xml`相同的目录中检查`LICENSE.txt`文件。
. 如果`pom.xml`文件包含*Licenses*部分（如 http://maven.apache.org/pom.html#Licenses[Maven文档]中所述），则DevKit会尝试从许可证的URL下载文本，然后保存下载的内容作为新的`LICENSE.md`文件。
. 如果上述步骤未找到许可证文本，则构建失败。

除了全局许可证文件外，DevKit还要求您的源文件还包含许可证标题。为了将此许可证头应用于项目中的每个源文件，请在项目根目录的命令控制台中运行以下命令（项目的根目录应包含pom.xml文件）：

[source, code, linenums]
----
mvn license:format
----

以上内容将贯穿整个项目，并将LICENSE_HEADER.txt文件中定义的许可证标头应用于每个源文件。这包括Java文件，SQL脚本，XML文件等等。

运行下面的命令在你的本地Maven仓库中安装你的连接器。但是，在这之前，它会检查每个源文件中的许可证标题。因此，需要在运行*install* maven目标之前运行上述Maven命令。

[source, code, linenums]
----
mvn clean install
----

要启用详细日志记录，请使用：

----
mvn clean install -Ddevkit.verbose.logging=true
----

或者，您可以选择打包连接器而不是安装。这将创建一个更新站点，您可以使用它来在Anypoint Studio中安装连接器。此更新站点将包含使用Mule应用程序内部连接器（调色板，XSD，源文件等的图标）所需的所有内容。因此，重要的是源文件在打包之前具有许可证标题。请注意，打包连接器不会检查源文件中的许可证标题。要打包连接器，只需在根文件夹中运行以下命令：

[source, code, linenums]
----
mvn clean package
----

== 创建端到端的用例示例

在将连接器发布给公众之前，请确保在连接器文档或存储库中包含示例端到端用例。这些用例在帮助用户成功使用连接器方面非常有用。他们应详细描述和解释使用连接器提供的功能所需的步骤。这将确保用户学习如何有效地使用连接器。

== 证明并发布您的连接器

MuleSoft的程序认证并发布第三方连接器，以便在mulesoft.org上向社区分发。有关此计划的更多信息，请mailto：connectors-certification@mulesoft.com [联系我们]。


== 将连接器上传到Exchange

Anypoint Studio通过涵盖所有版​​本连接器的*Feature ID*来识别每个连接器。为了通过 link:/anypoint-exchange[Anypoint Exchange]公开您的连接器，Exchange会提示您在上传连接器资源时提供此功能ID以及版本号。

按照以下步骤获取此ID：

. 解压缩包含连接器更新站点的文件
. 在创建的文件夹中，查找`context.xml`文件并使用文本编辑器打开它

. 在此文件中，搜索一个遵循以下模式的字符串：`id=’org.mule.tooling.ui.extension.<connector name>.feature.group’`。整个值就是连接器的功能ID。作为一个更具体的例子，你的特征ID可以是'org.mule.tooling.ui.extension.cloudhub.3.6.0.feature.group'


在同一个`context.xml`文件中，您可以在功能ID旁边找到名为*version*的标签。在Exchange中的*Connector Version*字段中提供此值。消费者以后只会看到美化和更简单的版本号。例如，如果您提供的版本号是2.0.1.201606101417，他们将只看到2.0.1。只有在编辑特定版本时才会显示完整版本号。
